# LFU_new

./: .gitignore  CMakeLists.txt  Makefile  README.md
headers/: LFU_cache.hpp  id_cache.hpp
ideal_cache/: id_cache.py
ideal_cache/headers/: id_cache.hpp
ideal_cache/make/: CMakeLists.txt
ideal_cache/source/: main.cpp
make/: CMakeLists.txt
source/: main.cpp
tests/: 111.in  222.in  333.in  444.in  555.in  666.in  test_gen.py  tester.cpp
tests/data_test/: 111.in  gen_page_t_test.py  str_tester.cpp
